将 PastScreen 重构为 PastScreen-CN，并完成本地化与界面更新 	•	更新 QuickCaptureTip，标题和提示信息改为使用本地化字符串。 	•	将 CustomNotificationView 中的字符串翻译为中文，包括按钮帮助文本和预览提示信息。 	•	修改 OnboardingView，以反映新的应用名称，并将引导流程中的文本翻译为中文。 	•	翻译 SettingsView，包括各个标签页名称、设置项标签及帮助说明为中文。 	•	更新 Localizable.strings：保留英文版本，并新增中文翻译，覆盖应用中的各类字符串。 	•	修改 README.md，使用中文反映新的应用名称及功能说明。 	•	移除 context.md 和 onboarding/rename_mapping.txt，因为它们已不再需要。 	•	删除 scripts/create_appstore_screenshots.py，该脚本在当前构建流程中已无必要。

--- a/PastScreen/Info-AppStore.plist
+++ b/PastScreen/Info-AppStore.plist
@@ -13,7 +13,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
-	<string>PastScreen</string>
+	<string>PastScreen-CN</string>
+	<key>CFBundleDisplayName</key>
+	<string>PastScreen-CN</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -25,10 +27,10 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSAppleEventsUsageDescription</key>
-	<string>PastScreen uses Apple Events for global keyboard shortcuts.</string>
+	<string>PastScreen-CN 需要使用 Apple 事件来注册全局快捷键。</string>
 	<key>NSScreenCaptureUsageDescription</key>
-	<string>PastScreen requires screen recording access to capture screenshots.</string>
+	<string>PastScreen-CN 需要屏幕录制权限来进行截图。</string>
 	<key>NSUserNotificationsUsageDescription</key>
-	<string>PastScreen displays notifications to confirm screenshot captures.</string>
+	<string>PastScreen-CN 会显示通知来确认截图完成。</string>
 </dict>
 </plist>
