--- a/PastScreen copy-Info.plist
+++ b/PastScreen copy-Info.plist
@@ -7,7 +7,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
-	<string>PastScreen</string>
+	<string>PastScreen-CN</string>
+	<key>CFBundleDisplayName</key>
+	<string>PastScreen-CN</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -17,11 +19,11 @@
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>NSAppleEventsUsageDescription</key>
-	<string>PastScreen utilise les événements Apple pour les raccourcis clavier globaux.</string>
+	<string>PastScreen-CN 需要使用 Apple 事件来注册全局快捷键。</string>
 	<key>NSScreenCaptureUsageDescription</key>
-	<string>PastScreen nécessite l'accès à la capture d'écran pour prendre des screenshots.</string>
+	<string>PastScreen-CN 需要屏幕录制权限来进行截图。</string>
 	<key>NSUserNotificationsUsageDescription</key>
-	<string>PastScreen affiche des notifications pour confirmer les captures d'écran.</string>
+	<string>PastScreen-CN 会显示通知来确认截图完成。</string>
 	<key>SUAllowsAutomaticUpdates</key>
 	<true/>
 	<key>SUAutomaticallyUpdate</key>
