新增 Localization.swift 并 swizzle Bundle.main.localizedString 做运行时切换；AppSettings.applyAppLanguage() 调用 Bundle.setAppLanguage。整体思路OK，但需注意：如果某些非 SwiftUI 的字符串是直接 NSLocalizedString + 未重新获取（例如已创建的菜单/窗口标题），可能需要手动刷新才能生效，建议验证菜单/通知等是否即时切换。 在 project.pbxproj 里 CODE_SIGN_IDENTITY[sdk=macosx*] 从 - 改为 Apple Development（Debug/Release 均改）。如果不希望变更签名配置，请确认。 Info-AppStore.plist 新增多语言到 CFBundleLocalizations，与 knownRegions 变更一致（包含 lzh/aq/ja/ko/de/fr/es/nl）。 AppLanguage 扩展为多语言并新增 antarctic，切换到南极语会播放音效 - Enhanced user experience by providing localized content for Dutch and Chinese users.

--- a/PastScreen/Info-AppStore.plist
+++ b/PastScreen/Info-AppStore.plist
@@ -15,6 +15,14 @@
 		<string>en</string>
 		<string>zh-Hans</string>
 		<string>zh-Hant</string>
+		<string>lzh</string>
+		<string>ja</string>
+		<string>ko</string>
+		<string>de</string>
+		<string>fr</string>
+		<string>es</string>
+		<string>nl</string>
+		<string>aq</string>
 	</array>
 	<key>CFBundleName</key>
 	<string>PastScreen-CN</string>
